--- a/client/besterday.scss
+++ b/client/besterday.scss
@@ -160,6 +160,12 @@ body {
     }
   }
 
+#login-buttons{
+  position:absolute;
+  right:20px;
+  z-index:999
+}
+
 /* ==========================================================================
    Journal
    ========================================================================== */
@@ -510,6 +516,11 @@ body {
 
       /* Font */
       /* Animation */
+      > li {
+        display:block;
+        list-style:none;
+        width:100%;
+      }
     }
   }
 }
@@ -595,7 +606,6 @@ li.sidebar-menu-sub-list-week {
 }
 li.sidebar-menu-sub-list-week.prev,li.sidebar-menu-sub-list-week.next {
   /* Positioning */
-  position:absolute;
   left:0;
   width:100%;
   /* Display & Box Model */
