--- a/client/besterday.css
+++ b/client/besterday.css
@@ -33,14 +33,25 @@ body {
   background: #fcf9f5;
   overflow: hidden; }
 
-.bg-image {
-  /* Positioning */
+.bg {
   position: absolute;
   width: 100%;
   height: 100%;
   z-index: -2;
+  top: 0;
+  left: 0; }
+
+.bg-image {
+  /* Positioning */
+  position: absolute;
+  width: 20%;
+  height: 20%;
+  z-index: -2;
+  top: 0;
+  left: 0;
   /* Presentation */
-  background: center center fixed;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
   background-size: cover;
   opacity: 0.9;
   /* Animation */
@@ -63,7 +74,18 @@ body {
   -moz-filter: grayscale(10%) blur(12px);
   -o-filter: grayscale(10%) blur(12px);
   -ms-filter: grayscale(10%) blur(12px);
-  filter: grayscale(10%) blur(12px); }
+  filter: grayscale(10%) blur(12px);
+  -webkit-transform-origin: top left;
+  -moz-transform-origin: top left;
+  -ms-transform-origin: top left;
+  -o-transform-origin: top left;
+  transform-origin: top left;
+  -webkit-transform: scale(5);
+  -moz-transform: scale(5);
+  -ms-transform: scale(5);
+  -o-transform: scale(5);
+  transform: scale(5);
+  filter: url(/img/blur.svg#blur); }
 
 .nav {
   /* Positioning */
@@ -214,13 +236,13 @@ body {
     -o-transition: padding 0.8s;
     transition: padding 0.8s; }
     #journal textarea::-webkit-input-placeholder {
-      opacity: .5; }
+      opacity: .5 !important; }
     #journal textarea:-moz-placeholder {
-      opacity: .5; }
+      opacity: .5 !important; }
     #journal textarea::-moz-placeholder {
-      opacity: .5; }
+      opacity: .5 !important; }
     #journal textarea:-ms-input-placeholder {
-      opacity: .5; }
+      opacity: .5 !important; }
   #journal .media {
     /* Positioning */
     position: absolute;
