--- a/client/besterday.scss
+++ b/client/besterday.scss
@@ -19,6 +19,10 @@ $text: #666666;
           #{$property}: $value;
 }
 
+@mixin animation($args...) {
+  @include prefix( animation, $args... );
+}
+
 @mixin transform($args...) {
   @include prefix( transform, $args... );
 }
@@ -403,8 +407,37 @@ body {
       /* Font */
       text-indent:-9999em;
     }
+    .controls-share-icon {
+      /* Positioning */
+      height:20px;
+      width:21px;
+      margin-left:4px;
+      margin-top:8px;
+      opacity:.2;
+      @include background-image-retina('/img/lock', 'png', 399px, 20px);
+      @include transition(margin-left .8s);
+    }
+    .controls-share-icon.lock {
+      @include animation(lock .4s steps(18) 1);
+      background-position:0 0 !important;
+    }
+    .controls-share-icon.unlock {
+      @include animation(unlock .4s steps(19) 1);
+      background-position:-378px 0 !important;
+      margin-left:8px;
+    }
+
   }
 
+}
+
+@-webkit-keyframes unlock {
+   from { background-position:    0px; }
+     to { background-position: -399px; }
+}
+@-webkit-keyframes lock {
+   from { background-position: -378px; }
+     to { background-position:    0px; }
 }
 
 
